@@ -18,6 +18,6 @@ public class LectureService {
     private final LectureRepository lectureRepository;
 
     public List<LectureSnapshot> getLectures() {
-        return lectureRepository.findAll().stream().map(Lecture::toSnapshot).collect(Collectors.toList());
+        return lectureRepository.findAll().stream().map(Lecture::toSnapshot).toList();
     }
 }
